[package]
name = "logicng"
version = "0.1.0-alpha.3"
authors = ["BooleWorks GmbH <info@booleworks.com>"]
edition = "2024"
include = ["/src"]

description = "A Library for Creating, Manipulating, and Solving Boolean Formulas"
license = "MIT OR Apache-2.0"
keywords = ["logic", "sat-solving", "boolean-formulas"]
categories = ["data-structures", "algorithms", "mathematics", "science"]
readme = "README.md"
documentation = "https://docs.rs/logicng/"
homepage = "https://www.logicng.org/"
repository = "https://github.com/booleworks/logicng-rs"

[lib]
crate-type = ["lib"]

[workspace]
members = ["lib/open_wbo_ffi"]

[dependencies]
fastrand = "2"
regex = "1.5.5"
bitvec = "1.0.1"
itertools = "0.14"
num-bigint = "0.4.2"
pest = "2.8"
pest_derive = "2.8"
dashmap = "6"
logicng-open-wbo-sys = { version = "0.1.0-alpha.3", path = "lib/open_wbo_ffi", optional = true }
logicng-sharp-sat-sys = {version = "0.1.0-alpha.1", path = "lib/sharp_sat_ffi", optional = true }

# bitvec@1.0.1 and wyz@0.5.1 allow tap@1.0.0 as dependency, but only build with
# tap@1.0.1 or newer. We need to enforce this version to build with
# -Zminimal-version.
tap = { version = "1.0.1", optional = true }

[features]
default = []
# these tests should only be executed with the release profile, otherwise they take too much time
long_running_tests = []
open_wbo = ["dep:logicng-open-wbo-sys"]
sharp_sat = ["dep:logicng-sharp-sat-sys"]

[profile.release]
debug = true # no runtime costs involved

[[example]]
name = "misc"
path = "examples/benches/performance_large.rs"

[[example]]
name = "model_counting"
path = "examples/benches/model_counting.rs"

[[example]]
name = "model_counting_sharpsat"
path = "examples/benches/model_counting_sharpsat.rs"
required-features = ["sharp_sat"]

[[example]]
name = "maximize"
path = "examples/benches/maximize.rs"

[[example]]
name = "maximize_maxsat"
path = "examples/benches/maximize_maxsat.rs"
required-features = ["open_wbo"]

[[example]]
name = "solve"
path = "examples/benches/solve.rs"

[[example]]
name = "parse"
path = "examples/benches/parse.rs"

[[example]]
name = "bench_overview"
path = "examples/benches/overview.rs"

[[example]]
name = "bench_overview2"
path = "examples/benches/overview2.rs"

[[test]]
name = "test"
path = "tests/sat/dimacs_tests.rs"

[[test]]
name = "concurrency_tests"
path = "tests/concurrency.rs"
