[package]
name = "logicng-open-wbo-sys"
version = "0.1.0-alpha.2"
authors = ["BooleWorks GmbH <info@booleworks.com>"]
edition = "2021"
build = "build.rs"
include = ["build.rs", "/src", "/open_wbo/include", "/open_wbo/logicng-open-wbo", "/open_wbo_wrapper"]

description = "LogicNG Bindings for OpenWBO"
license = "MIT OR Apache-2.0"
keywords = ["FFI", "solver", "MaxSAT"]
categories = ["external-ffi-bindings"]
readme = "README.md"
documentation = "https://docs.rs/logicng-open-wbo-sys/"
homepage = "https://www.logicng.org/"
repository = "https://github.com/booleworks/logicng-rs"

[lib]
crate-type = ["lib"]

[build-dependencies]
cxx-build = "1.0.107"

[dependencies]
cxx = "1.0.107"
