[package]
name = "logicng-open-wbo-sys"
version = "0.1.0"
authors = ["BooleWorks GmbH <info@booleworks.com>"]
edition = "2024"
build = "build.rs"

description = "LogicNG Bindings for OpenWBO"
license = "MIT OR Apache-2.0"
keywords = ["FFI", "solver", "MaxSAT"]
categories = ["external-ffi-bindings"]
readme = "README.md"
documentation = "https://docs.rs/logicng-open-wbo-sys/"
homepage = "https://www.logicng.org/"
repository = "https://github.com/booleworks/logicng-rs"

[lib]
crate-type = ["lib"]

[build-dependencies]
cxx-build = "1.0.187"

[dependencies]
cxx = "1.0.187"

# cxx@1.0.187 and cxx-build@1.0.187 allow hashbrown@0.15.0 as dependency, which
# has a security vulnerability. Thus, we enforce hashbrown@0.15.1 or newer.
hashbrown = { version = "0.15.1", optional = true }
