[package]
name = "logicng-sharp-sat-sys"
version = "0.1.0-alpha.1"
authors = ["BooleWorks GmbH <info@booleworks.com>"]
edition = "2024"
# build = "build.rs"

description = "LogicNG Bindings for SharpSAT"
license = "MIT OR Apache-2.0"
keywords = ["FFI", "solver", "MaxSAT"]
categories = ["external-ffi-bindings"]

[lib]
crate-type = ["lib"]

[build-dependencies]
cxx-build = "1.0.187"
cmake = "0.1"

[dependencies]
cxx = "1.0.187"

# cxx@1.0.187 and cxx-build@1.0.187 allow hashbrown@0.15.0 as dependency, which
# has a security vulnerability. Thus, we enforce hashbrown@0.15.1 or newer.
# https://rustsec.org/advisories/RUSTSEC-2024-0402
hashbrown = { version = "0.15.1", optional = true }
